--- a/public/css/main.css
+++ b/public/css/main.css
@@ -323,3 +323,92 @@ button:hover {
     cursor: pointer;
     color: #c40a0a;
 }
+
+
+@media screen and (max-width: 850px){
+    .logo{
+       font-size: 20px;
+       margin-top: 10px;
+    }
+
+    li a {
+        text-decoration: none;
+        color: #000;
+        padding: 0.3rem 0.5rem;
+        white-space: nowrap;
+        font-size: 10px;
+        text-transform: uppercase;
+    }
+
+    .section-container{
+        height: 500px;
+    }
+
+    .slide{
+        height: 100%;
+    }
+    .img-container{
+        width: 80%;
+    }
+
+    img {
+        height: 60%;
+        padding: 5px;
+    }
+
+    .info-container{
+        width: 40%;
+    }
+
+    
+    .info-container {
+        margin: 10px;
+    }
+
+    .info-container .tittle {
+        font-size: 10px;
+    }
+
+    .desc {
+        margin: 20px 0px;
+        font-size: 14px;
+        font-weight: 500;
+        letter-spacing: 3px;
+    }
+
+
+    .box {
+        margin: 5px;
+    }
+
+    .bottom{
+        height: 80px;
+    }
+    
+    .bottom p {
+        font-size: 15px;
+    }
+
+    .bottom h2{
+        font-size: 15px;
+    }
+     
+    .bottom button {
+    padding: 0.7rem;
+    }
+
+    .img-container img {
+        object-fit: cover;
+    }
+
+    .info p {
+        font-size: 10px;
+        text-transform: uppercase;
+        margin: 0 4px;
+    }
+    
+    .info h2 {
+        font-size: 10px;
+    }
+
+}
