--- a/views/index.html
+++ b/views/index.html
@@ -46,10 +46,10 @@
             <div class="wrapper">
                 <div class="slide">
                     <div class="img-container">
-                      <img src="../img/jacket.png" alt="jacket">
+                      <img src="../img/png1.png" alt="jacket">
                     </div>
                     <div class="info-container">
-                        <h1 class="title">SUMMER SAL</h1>
+                        <h1 class="title">AWESOME OUTFIT FOR U</h1>
                         <p class="desc">DON'T COMPROMISE ON STYLE!! GET FLAT 30% OFF FOR NEW ARRIVALS</p>
                         <button >SHOP NOW</button>
                     </div>
